fix: section-desc align

--- a/css/style.css
+++ b/css/style.css
@@ -6821,6 +6821,11 @@ body.admin-bar .header-menu-area.sticky_menu {
   right: unset;
   bottom: unset;
 }
+.testimonial-area.style-1 .section-desc {
+  height: 100%;
+  display: flex;
+  align-items: end;
+}
 @media (max-width: 991px) {
   .testimonial-area.style-1 .section-desc {
     margin-top: 24px;
