--- a/sass/modules/testimonial/_testimonial-area.scss
+++ b/sass/modules/testimonial/_testimonial-area.scss
@@ -9,6 +9,9 @@
             bottom: unset;
         }
         .section-desc {
+            height: 100%;
+            display: flex;
+            align-items: end;
             @include rmaxwd(991) {
                 margin-top: 24px;
             }
